
                     ngIRCd - Next Generation IRC Server

                      (c)2001-2004 by Alexander Barton,
                    alex@barton.de, http://www.barton.de/

               ngIRCd is free software and published under the
                   terms of the GNU General Public License.

                               -- ChangeLog --


ngIRCd CVSHEAD

  - Made ngIRCd compile on HP/UX 10.20 with native HP pre-ANSI C compiler and
    most probably other older C compilers on other systems.
  - When the daemon should switch to another user ID (ServerID is defined in
    the configuration file) and is not running in a chroot environment, it
    changes it's working directory to the home directory of this user. This
    should enable the system to write proper core files when not running with
    root privileges ...

ngIRCd 0.8.1 (2004-12-25)

  - Autoconf: Updated config.guess and config.sub
  - Added some more debug code ...
  - Fixed wrong variable names in output of "ngircd --configtest".
  - Debian: Fixed the name of the "default file" in the init script for
    ngircd-full packages. And do the test if the binary is executable after
    reading this file.
  - Enhanced the "test suite": please have a look at src/testsuite/README!

ngIRCd 0.8.0 (2004-06-26)

  - Fixed wrong buffer size calculation for results of the resolver.

  ngircd 0.8.0-pre2 (2004-05-16)
  - Enhanced logging to console when running in "no-detached mode": added
    PID and log messages of resolver sub-processes.
  - Fixed host name lookups when using IDENT user lookups.
  - "make clean" and "make maintainer-clean" remove more files now.

  ngIRCd 0.8.0-pre1 (2004-05-07)
  - Two new configuration options: "ChrootDir" and "MotdPhrase", thanks to
    Benjamin Pineau <ben@zouh.org>. Now you can force the daemon to change
    its root and working directory to something "safe". MotdPhrase is used
    to define an "MOTD string" instead of a whole file, useful if the