@@ -12,6 +12,9 @@
 
 ngIRCd CVSHEAD
 
+  - Added support for the Howl (http://www.porchdogsoft.com/products/howl/)
+    Rendezvous API, in addition to the API of Apple (Mac OS X). The available
+    APU will be autodetected when you call "./configure --with-rendezvous".
   - Made ngIRCd compile on HP/UX 10.20 with native HP pre-ANSI C compiler and
     most probably other older C compilers on other systems.
   - When the daemon should switch to another user ID (ServerID is defined in
@@ -550,4 +553,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.247 2004/12/25 00:22:00 alex Exp $
+$Id: ChangeLog,v 1.248 2004/12/26 00:14:33 alex Exp $
